finished my first ever website

--- a/index.html
+++ b/index.html
@@ -8,12 +8,13 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <section>
+    <section class="top-banner">
                 <div class="half-width">
                     <h1>Welcome to</h1>
-                    <h1><span class="name-highlight">Jhankar</span> world</h1>
+                    <h1><span class="orange-highlight">Jhankar</span> world</h1>
                     <h3>World class professional developer</h3>
                     <p>I like to work as avolunteer. i like web developing,i like movies,i also like to learn english beacause english is an important and necessary language.I like to work as avolunteer. i like web developing,i like movies,i also like to learn english beacause english is an important and necessary language.</p>
+                    <a  class="link-button" target="_blank" href="https://www.linkedin.com/feed/">Hire me</a>
                 </div>
 
                <div class="half-width">
@@ -23,5 +24,42 @@
 
 
     </section>
+    <section class="Dream-area">
+        <div class="half-width">
+            <img src="images/profile2.png" alt="">
+
+
+        </div>
+        <div class="half-width">
+            <h2>Big dream</h2>
+            <h3>Become world's first developer</h3>
+            <p>I like to work as avolunteer. i like web developing,i like movies,i also like to learn english beacause english is an important and necessary language.I like to work as avolunteer. i like web developing,i like movies,i also like to learn english beacause english is an important and necessary language.</p>
+            <a  class="link-button"target="_blank" href="https://www.linkedin.com/feed/">Download resume</a>
+
+
+
+        </div>
+
+    </section>
+    <section class="experience-area">
+        <h2>Experiences</h2>
+        <div id="full-stack" class="half-width single-experience">
+            <h2>Full stack web dev</h2>
+            <h3 class=orange-highlight>2021-present | Pro level web dev</h3>
+            <p>I like to work as avolunteer. i like web developing,i like movies,i also like to learn english beacause english is an important and necessary language.I like to work as avolunteer. i like web developing,i like movies,i also like to learn english beacause english is an important and </p>
+
+        </div>
+        <div id="baby-web" class="half-width single-experience">
+        <h2>Baby web developer</h2>
+        <h3 class=orange-highlight>2020-2021| Programming hero learner</h3>
+        <p>I like to work as avolunteer. i like web developing,i like movies,i also like to learn english beacause english is an important and necessary language.I like to work as avolunteer. i like web developing,i like movies,i also like to learn english beacause english is an important and necessary language.</p>
+
+        </div>
+
+    </section>
+    <footer>
+        <p>@ Twinkle 2021,all rights reserved</p>
+    </footer>
+
 </body>
 </html>
